Flask/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  labels:
    app: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-deployment
  template:
    metadata:
      labels:
        app: flask-deployment
    spec:
      containers:
      - name: flask-deployment
        image: sumonaust/python-app:latest
        ports:
        - containerPort: 80
