Flask/k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
